--- a/src/styles.css/coreStyles.css
+++ b/src/styles.css/coreStyles.css
@@ -17,7 +17,7 @@
   --color-txt: #0c2c39;
   --overlay-txt-img: #0c2c39b2;
   --overlay-txt-color: #e5e5dc;
-  --background-color: #f1f1ef;
+  --background-color: #e5e5dc;
   --primary-color: #26495c;
   --title-color: #c66b3d;
   --elementDecoration-color: #c4a35a;
@@ -58,12 +58,9 @@ h4 {
   font-size: 2rem; /* == 32px */
 }
 h5 {
-  font-family: "Abril Fatface", cursive;
   font-size: 1.8rem; /* == 28.8px */
 }
 h6 {
-  font-family: "Roboto Condensed", sans-serif;
-  font-weight: bold;
   font-size: 1.6rem; /* 25.6px */
 }
 p {
@@ -139,18 +136,7 @@ nav {
   height: 0.437rem;
   border-radius: 0.5625rem;
 }
-/*=======================================================*/
-/*   FOOTER   */
-/*=======================================================*/
-footer {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-  color: var(--background-color);
-  background-color: var(--color-txt);
-  height: 7rem;
-  width: 100vmax;
-}
+
 /*=======================================================*/
 /*   FOOTER   */
 /*=======================================================*/
@@ -183,12 +169,11 @@ footer {
     flex-direction: column;
     align-items: center;
     right: 0;
-    height: 100vh;
+    height: 92vh;
     top: 0;
     width: 60%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
-    z-index: 2;
   }
   .nav-links a {
     text-transform: uppercase;
@@ -201,7 +186,6 @@ footer {
     flex-direction: column;
     align-items: flex-end;
     margin-right: 0.995rem;
-    z-index: 3;
   }
 }
 .nav-open {
